added jquery file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Michael Muinos</title>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="jquery/jquery.js">
-  	<link rel="stylesheet" href="bootstrap/js/bootstrap.min.js">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   	<link rel="stylesheet" type="text/css" href="index.css?version=6">
 </head>
 <body>
