changed mixtape pic name

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
 			</div>
 			<div id="mixtake-pic-container" class="row col-xs-12">
 				<div class="col-xs-11 col-md-4">
-					<img height="275px" width="300px" src="images/mixtapepic1.png"> 
+					<img height="275px" width="300px" src="images/mixtapepic1.PNG"> 
 				</div>
 				<div class="col-xs-11 col-md-4">
-					<img height="275px" width="350px" src="images/mixtapepic2.png">
+					<img height="275px" width="350px" src="images/mixtapepic2.PNG">
 				</div>
 				<div class="col-xs-11 col-md-4">
-					<img height="275px" width="300px" src="images/mixtapepic3.png">
+					<img height="275px" width="300px" src="images/mixtapepic3.PNG">
 				</div>
 			</div>
 		</div>
