added resume info

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 			<hr>
 			<p><b>Reazon Systems, Inc.</b>
 				<span class="resume-italic-section">
-					<i>***</i>
+					<i>June 2016 - September 2016</i>
 				</span>
 			</p>
 			<p><b>Web Development Intern</b>
@@ -440,7 +440,6 @@
 			<div class="section-spacing-top-xs section-spacing-bottom-small resume-desc">
 				<p>Accomplishments:</p>
 				<ul>
-					<!-- on hover of li's, say a message whether you liked it or not -->
 					<li>Converted outdated code to incorporate a responsive design using Bootstrap and ColdFusion</li>
 					<li>Created a custom sidebar to better accomodate all screen sizes</li>
 						<ul>
@@ -452,7 +451,7 @@
 			</div>
 			<p><b>Google Applied CS Course - Android Development</b>
 				<span class="resume-italic-section">
-					<i>***</i>
+					<i>June 2016 - August 2016</i>
 				</span>
 			</p>
 			<p><b>Certificate of Completion:&nbsp&nbsp</b><a href="images/certificate.pdf">Certificate.pdf</a>
