added titles to projects

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="container">
 			<h1 id="jumbotron-header">Hello, my name is Michael Muinos.</h1>
 			<h1 id="dynamic-header">Programmer</h2>
-			<p id="jumbotron-desc">Girlfriend, cats, and programming sums up my day pretty nicely.
+			<p id="jumbotron-desc">Girlfriend, cats, and programming sum up my day pretty nicely.
 			</p>
 		</div>
 	</div>
@@ -50,8 +50,8 @@
 		<h1>Introduction</h1>
 		<div class="col-md-1"></div>
 		<div class="col-xs-12 col-md-7" id="introduction">
-			<p>Welcome to my portfolio site! I am going into my 5th year as a Computer Science student at California State Polytechnic University in Pomona. I am currently working part-time as a Software Development intern and am looking for further internships before graduation. After graduation, I plan to immediately start my job hunt to look for likeminded individuals to work with.</p>
-			<p>If you continue on, you will find information on some personal projects I have done, take a look at my most up to date resume, and find my contact information. If you are just here for code, you can view my github link above, or look at the coding section :)</p>
+			<p>Welcome to my portfolio site! I am going into my 5th year as a <b>Computer Science student at California State Polytechnic University</b> in Pomona. Since I am close to graduation, I plan to immediately start my job hunt to look for a fun crowd to work with!</p>
+			<p>If you continue on, you will find information on some personal projects I have done, take a look at my most up to date resume, and find my contact information. If you are just here for code, you can <a href="https://github.com/JustPlainGoat">view my github</a>, or look at the coding section :)</p>
 			<p>Thank you!</p>
 		</div>
 		<div class="col-xs-12 col-md-3" id="intro-pic">
@@ -63,6 +63,7 @@
 	<div id="project-wrapper"> <!-- start of project wrapper -->
 		<h1 class="section-spacing-top section-spacing-bottom">Projects</h1>
 		<div id="horde-clicker" class="row">
+			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 1</span>
 			<div class="project-logo col-xs-12">
 				<img height="100px" width="200px" src="images/clickerlogo.png">
 			</div>
@@ -103,6 +104,7 @@
 		<hr>
 
 		<div id="fact-hack" class="row">
+			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 2</span>
 			<div class="project-logo col-xs-12">
 				<img height="100px" width="200px" src="images/facthacklogo.png">
 			</div>
@@ -139,6 +141,7 @@
 		<hr>
 
 		<div id="mixtape-maker" class="row">
+			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 3</span>
 			<div class="project-logo col-xs-12">
 				<img height="200px" width="230px" src="images/mixtapelogo.png">
 			</div>
@@ -177,12 +180,12 @@
 			<p class="resume-part-title">EDUCATION</p>
 			<hr>
 			<p><b>California Polytechnic State University</b>
-				<span class="resume-italic-section">
+				<span class="italic-section">
 					<i>Expected: March 2017</i>
 				</span>
 			</p>
 			<p><b>Bachelor of Science in Computer Science</b>
-				<span class="resume-italic-section">
+				<span class="italic-section">
 					<i>Pomona, California</i>
 				</span>				
 			</p>
@@ -428,12 +431,12 @@
 			<p class="section-spacing-top resume-part-title">Experience</p>
 			<hr>
 			<p><b>Reazon Systems, Inc.</b>
-				<span class="resume-italic-section">
+				<span class="italic-section">
 					<i>June 2016 - September 2016</i>
 				</span>
 			</p>
 			<p><b>Web Development Intern</b>
-				<span class="resume-italic-section">
+				<span class="italic-section">
 					<i>Santa Ana, California</i>
 				</span>				
 			</p>
@@ -450,12 +453,12 @@
 				</ul>
 			</div>
 			<p><b>Google Applied CS Course - Android Development</b>
-				<span class="resume-italic-section">
+				<span class="italic-section">
 					<i>June 2016 - August 2016</i>
 				</span>
 			</p>
 			<p><b>Certificate of Completion:&nbsp&nbsp</b><a href="images/certificate.pdf">Certificate.pdf</a>
-				<span class="resume-italic-section">
+				<span class="italic-section">
 					<i>Pomona, California</i>
 				</span>
 			</p>
@@ -491,7 +494,7 @@
 	<div id="code-wrapper"> <!-- start of code section -->
 		<h1 class="section-spacing-top section-spacing-bottom">Code</h1>
 		<div class="code-example">
-			<p><b>Calculating a Chebyshev Polynomial - Dynamic Programming</b>
+			<p><b>Calculating a Chebyshev Polynomial - Dynamic Programming (Personal Project)</b>
 				<span><i>Code Example 1</i></span>
 			</p>
 			<div>
@@ -596,7 +599,7 @@
 		</pre>
 
 		<div class="code-example">
-			<p><b>Picture Organizer - A Python Program</b>
+			<p><b>Picture Organizer - A Python Program (Personal Project)</b>
 				<span><i>Code Example 2</i></span>
 			</p>
 			<div>
@@ -701,7 +704,7 @@
     	<div id="social" class="section-spacing-bottom-small row">
 	      	<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/mail.png" width="84px" height="84px">
-				<p><a href="mailto:michaelmuinos@yahoo.com">michaelmuinos@yahoo.com</a></p>
+				<p><a href="mailto:michaelmuinos@yahoo.com">michaelmuinos@yahoo(dot)com</a></p>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/fb.png" width="84px" height="84px">
@@ -709,7 +712,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/phone.png" width="84px" height="84px">
-				<p>(909)767-1696</p>
+				<p>(9O9)767-1696</p>
 			</div>
     	</div>
   	</div>
