removed django from table

--- a/index.html
+++ b/index.html
@@ -321,13 +321,6 @@
 				  		<td></td>
 				  		<td></td>
 				  		<td></td>
-				  	</tr>					  	
-				  	<tr>
-				  		<td class="beginner">Django</td>
-				  		<td class="class-x">X</td>
-					    <td></td>
-					    <td></td>
-					    <td></td>
 				  	</tr>					  						  	
 				  	<tr>
 				  		<td class="beginner">Javascript</td>
@@ -444,7 +437,7 @@
 				<p>Accomplishments:</p>
 				<ul>
 					<li>Converted outdated code to incorporate a responsive design using Bootstrap and ColdFusion</li>
-					<li>Created a custom sidebar to better accomodate all screen sizes</li>
+					<li>Created a custom sidebar to better accommodate all screen sizes</li>
 						<ul>
 							<li>Responsiveness done using media queries</li>
 						</ul>
@@ -704,7 +697,7 @@
     	<div id="social" class="section-spacing-bottom-small row">
 	      	<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/mail.png" width="84px" height="84px">
-				<p><a href="mailto:michaelmuinos@yahoo.com">michaelmuinos@yahoo(dot)com</a></p>
+				<p><a href="mailto:michaelmuinos@yahoo.com">michaelmuinos@yahoo.com</a></p>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/fb.png" width="84px" height="84px">
@@ -712,7 +705,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/phone.png" width="84px" height="84px">
-				<p>(9O9)767-1696</p>
+				<p>(909)767-1696</p>
 			</div>
     	</div>
   	</div>
