--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<div id="first-jumbo" class="jumbotron">
 		<div class="container">
-			<a href="https://github.com/JustPlainGoat"><p>Check out my Github <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/octocat.png" height="20" width="20"> @JustPlainGoat</p></a>
+			<a href="https://github.com/MichaelMuinos"><p>Check out my Github <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/octocat.png" height="20" width="20"> @MichaelMuinos</p></a>
 		</div>
 	</div>
 
@@ -51,7 +51,7 @@
 		<div class="col-md-1"></div>
 		<div class="col-xs-12 col-md-7" id="introduction">
 			<p>Welcome to my portfolio site! I am going into my 5th year as a <b>Computer Science student at California State Polytechnic University</b> in Pomona. Since I am close to graduation, I plan to immediately start my job hunt to look for a fun crowd to work with!</p>
-			<p>If you continue on, you will find information on some personal projects I have done, take a look at my most up to date resume, and find my contact information. If you are just here for code, you can <a href="https://github.com/JustPlainGoat">view my github</a>, or look at the coding section :)</p>
+			<p>If you continue on, you will find information on some personal projects I have done, take a look at my most up to date resume, and find my contact information. If you are just here for code, you can <a href="https://github.com/MichaelMuinos">view my github</a>, or look at the coding section :)</p>
 			<p>Thank you!</p>
 		</div>
 		<div class="col-xs-12 col-md-3" id="intro-pic">
@@ -169,7 +169,7 @@
 				<li>How to use the Tkinter module for the GUI window, labels, and text fields</li>
 				<li>Commands to download audio using Youtube DL</li>
 			</ul>
-			<p>The source code can be viewed <a href="https://github.com/JustPlainGoat/Mix-Tape-Maker/blob/master/Converter.py">here</a>.&nbsp:)
+			<p>The source code can be viewed <a href="https://github.com/MichaelMuinos/Mix-Tape-Maker/blob/master/Converter.py">here</a>.&nbsp:)
 		</div>
 		<div class="section-spacing-top-lg"></div>
 	</div> <!-- end of project wrapper -->
@@ -473,11 +473,11 @@
 				<ul>
 					<li>Memory Game(Made in final workshop)</li>
 					<ul>
-						<li><a href="https://github.com/JustPlainGoat/Google-Applied-CS-Apps/tree/master/MemoryGame">https://github.com/JustPlainGoat/Google-Applied-CS-Apps/tree/master/MemoryGame</a></li>
+						<li><a href="https://github.com/MichaelMuinos/Google-Applied-CS-Apps/tree/master/MemoryGame">https://github.com/MichaelMuinos/Google-Applied-CS-Apps/tree/master/MemoryGame</a></li>
 					</ul>
 					<li>All other apps</li>
 					<ul>
-						<li><a href="https://github.com/JustPlainGoat/Google-Applied-CS-Apps">https://github.com/JustPlainGoat/Google-Applied-CS-Apps</a></li>
+						<li><a href="https://github.com/MichaelMuinos/Google-Applied-CS-Apps">https://github.com/MichaelMuinos/Google-Applied-CS-Apps</a></li>
 					</ul>
 				</ul>
 			</div> <!-- end of resume-desc -->
