changed resume table

--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
 					    <td></td>
 				  	</tr>
 				  	<tr>
-					    <td class="intermediate">C++</td>
-					    <td></td>
+					    <td class="proficient">C++</td>
 					    <td class="class-x">X</td>
+					    <td></td>
 					    <td></td>
 					    <td></td>
 				  	</tr>
