--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
     	<div id="social" class="section-spacing-bottom-small row">
 	      	<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/mail.png" width="84px" height="84px">
-				<p><a href="mailto:michaelmuinos@yahoo.com">michaelmuinos@yahoo.com</a></p>
+				<p><a href="mailto:michaelmuinos@gmail.com">michaelmuinos@gmail.com</a></p>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<img src="images/fb.png" width="84px" height="84px">
