updated experience and classes section

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 			<hr>
 			<p><b>California Polytechnic State University</b>
 				<span class="italic-section">
-					<i>Expected: March 2017</i>
+					<i>Expected: June 2017</i>
 				</span>
 			</p>
 			<p><b>Bachelor of Science in Computer Science</b>
@@ -240,17 +240,32 @@
 						</ul>
 					<li id="class10">Python Programming</li>
 						<ul id="class10-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
-							<li>I am currently in this class. Will be updated soon!</li>
-							<p>Grade Received: TBA</p>
+							<li>Introductory course to Python programming. Learned various modules to accomplish projects and lab assignments.</li>
+							<p>Grade Received: A</p>
 						</ul>
 					<li id="class11">Computer Architecture</li>
 						<ul id="class11-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
-							<li>I am currently in this class. Will be updated soon!</li>
-							<p>Grade Received: TBA</p>
+							<li>Taught various concepts such as pipelining, branch prediction, hyper-threading technology, cache design, and out-of-order execution. Presented on the Alpha architecture.</li>
+							<p>Grade Received: A</p>
 						</ul>
 					<li id="class12">Programming Languages</li>
 						<ul id="class12-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
-							<li>I am currently in this class. Will be updated soon!</li>
+							<li>Learned about the intricacies of modern programming languages. Also, we were exposed to other types of programming paradigms such as logic, functional, and imperative languages. Finally, learned Swift and developed a fully functional drawing application for the IOS platform.</li>
+							<p>Grade Received: A</p>
+						</ul>
+					<li id="class13">Operating Systems</li>
+						<ul id="class13-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+							<li>I am currently in this class. Grade will be updated soon!</li>
+							<p>Grade Received: TBA</p>
+						</ul>
+					<li id="class14">Database Systems</li>
+						<ul id="class14-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+							<li>I am currently in this class. Grade will be updated soon!</li>
+							<p>Grade Received: TBA</p>
+						</ul>
+					<li id="class15">Software Engineering</li>
+						<ul id="class15-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+							<li>I am currently in this class. Grade will be updated soon!</li>
 							<p>Grade Received: TBA</p>
 						</ul>
 				</ul>
@@ -423,6 +438,28 @@
 
 			<p class="section-spacing-top resume-part-title">Experience</p>
 			<hr>
+			<p><b>Computer Science Department Grader</b>
+				<span class="italic-section">
+					<i>November 2016 - Current</i>
+				</span>
+			</p>
+			<p><b>Cal Poly Pomona Undergraduate</b>
+				<span class="italic-section">
+					<i>Pomona, California</i>
+				</span>
+			</p>
+			<div class="section-spacing-top-xs section-spacing-bottom-small resume-desc">
+				<p>Classes Grader For:</p>
+				<ul>
+					<li>Data Structures and Algorithms</li>
+					<li>Design and Analysis of Algorithms</li>
+				</ul>
+				<p>Responsibilities:</p>
+				<ul>
+					<li>Work with instructor to determine the appropriate point breakdown per project</li>
+					<li>Test students' code for errors and determine an appropriate score</li>
+				</ul>
+			</div>
 			<p><b>Reazon Systems, Inc.</b>
 				<span class="italic-section">
 					<i>June 2016 - September 2016</i>
@@ -734,6 +771,9 @@
 			setResumeHoverCSS("#class10","#class10-desc");
 			setResumeHoverCSS("#class11","#class11-desc");
 			setResumeHoverCSS("#class12","#class12-desc");
+			setResumeHoverCSS("#class13","#class13-desc");
+			setResumeHoverCSS("#class14","#class14-desc");
+			setResumeHoverCSS("#class15","#class15-desc");
 
 			setButtonClick("#home-btn", "#first-jumbo");
 			setButtonClick("#project-btn", "#project-wrapper");
