changed languages table

--- a/index.html
+++ b/index.html
@@ -310,15 +310,8 @@
 					    <td></td>
 				  	</tr>
 				  	<tr>
-					    <td class="proficient">C++</td>
+					    <td class="intermediate">C++</td>
 					    <td></td>
-					    <td></td>
-					    <td class="class-x">X</td>
-					    <td></td>
-				  	</tr>
-				  	<tr>
-				  		<td class="intermediate">PHP</td>
-				  		<td></td>
 					    <td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
@@ -331,26 +324,26 @@
 					    <td></td>
 				  	</tr>
 				  	<tr>
+				  		<td class="beginner">Django</td>
+				  		<td class="class-x">X</td>
+				  		<td></td>
+				  		<td></td>
+				  		<td></td>
+				  	</tr>
+				  	<tr>
+				  		<td class="beginner">PHP</td>
+				  		<td class="class-x">X</td>
+					    <td></td>
+					    <td></td>
+					    <td></td>
+				  	</tr>
+				  	<tr>
 				  		<td class="beginner">Swift</td>
 				  		<td class="class-x">X</td>
 				  		<td></td>
 				  		<td></td>
 				  		<td></td>
 				  	</tr>					  						  	
-				  	<tr>
-				  		<td class="beginner">Javascript</td>
-				  		<td class="class-x">X</td>
-					    <td></td>
-					    <td></td>
-					    <td></td>
-				  	</tr>					  	
-				  	<tr>
-				  		<td class="beginner">JQuery</td>
-				  		<td class="class-x">X</td>
-					    <td></td>
-					    <td></td>
-					    <td></td>
-				  	</tr>
 				  	<tr>
 				  		<td class="beginner">SQL</td>
 				  		<td class="class-x">X</td>
@@ -385,13 +378,6 @@
 				  	<tr>
 					    <td class="intermediate">PyCharm</td>
 					    <td></td>
-					    <td class="class-x">X</td>
-					    <td></td>
-					    <td></td>
-				  	</tr>
-				  	<tr>
-				  		<td class="intermediate">PhpStorm</td>
-				  		<td></td>
 					    <td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
@@ -449,7 +435,7 @@
 				</span>
 			</p>
 			<div class="section-spacing-top-xs section-spacing-bottom-small resume-desc">
-				<p>Classes Grader For:</p>
+				<p>Classes Graded For:</p>
 				<ul>
 					<li>Data Structures and Algorithms</li>
 					<li>Design and Analysis of Algorithms</li>
